2012-03-24  Ethan A Merritt  <merritt@u.washington.edu>

	* term/js/canvasmath.js:  Handle tab and newline.

2012-03-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c src/plot2d.h:  Allow variable pointsize in label plots.

	* term/canvas.trm:  Push the correction for over-sampling of Pt
	coordinates down one level so it matches the other graphics item types.

	* src/unset.c:  "reset" must clear range_is_reverted flag for all axes.

2012-03-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c (gen_tics): Be even more paranoid about precision error in
	axis range or tic steps.

	* src/set.c: Sanity checking on requested number of minitic intervals.

2012-03-18  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/gplt_x11.c (exec_cmd): Don't feed unknown strings directly
	to *printf.

	* src/plot3d.c (eval_3dplots): Don't mix up enums JUSTIFY and
	VERT_JUSTIFY.

	* src/plot2d.c (eval_plots): Don't mix up enums JUSTIFY and
	VERT_JUSTIFY.

	* src/graphics.c (do_plot): Don't mix up enums JUSTIFY and
	VERT_JUSTIFY.

	* src/color.c (cbtick_callback): Don't mix up enums JUSTIFY and
	VERT_JUSTIFY.

2012-03-16  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm term/svg.trm:
	Do not allow execution of popen() commands during initialization.

2012-03-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.h src/graphics.c src/save.c src/set.c src/show.c
	src/term.c src/term_api.h docs/gnuplot.doc:
	New option "set style circle {no}wedges"

2012-03-13  Michael Reeves  <mgreeves@users.sourceforge.net>

	* src/graphics.c: Improved calculation of the margin space needed to
	hold rotated x and x2 tic labels.
	Bug #3482491

2012-03-12 Bastian Maerkisch  <bmaerkisch@web.de>

	* win/gnuplot.iss: Bump version number of installer to 4.7.

	* config/mingw/Makefile: New target 'zip' for zip file distribution.

2012-03-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.h src/graphics3d.c src/util3d.c: